--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -1,63 +1,138 @@
-/*
- * @NOTE: Prepend a `~` to css file paths that are in your node_modules
- *        See https://github.com/webpack-contrib/sass-loader#imports
- */
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  position: relative;
-  color: white;
-  height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
-  font-family: sans-serif;
-  overflow-y: hidden;
   display: flex;
   justify-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  /* background-color: rgba(238, 238, 238, 0.6666666667); */
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+header {
+  background-color: #1f70c0;
+  color: white;
+  padding: 1rem 1rem;
+  border-radius: 0 0 15px 15px;
+  display: flex;
+  justify-content: center;
+}
+
+.input-panel {
+  margin: 1rem;
+  border-radius:0.4rem;
+  background-color: #eee;
+  padding: 1rem;
+}
+
+.input-area {
+  display: flex;
   align-items: center;
+  padding-inline: 1rem;
 }
 
-button {
-  background-color: white;
-  padding: 10px 20px;
+.task-input {
+  height: 1.5rem;
+  padding: 0.375rem 1rem;
+  font-size: 1rem;
+  border: 1px solid #ced4da;
   border-radius: 10px;
-  border: none;
-  appearance: none;
-  font-size: 1.3rem;
-  box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
-    0px 18px 88px -4px rgba(24, 39, 75, 0.14);
-  transition: all ease-in 0.1s;
-  cursor: pointer;
-  opacity: 0.9;
-  margin: 0 1rem;
+  flex-grow: 1;
+  transition: 0.3s;
+}
+.task-input:focus {
+  color: #444;
+  border-color: #9ac9fc;
+  outline: 0;
 }
 
-button:hover {
-  transform: scale(1.05);
-  opacity: 1;
+.timer-display {
+  font-size: 1.75rem;
+  font-weight: 500;
+  margin-inline: 1rem;
+  width: 130px;
 }
 
-li {
+.list-panel {
+  padding-inline: 2rem;
+  max-width: 1000px;
+  align-self: center;
+  width: 100%;
+}
+
+.entries-list {
   list-style: none;
 }
-
-a {
-  text-decoration: none;
-  height: fit-content;
-  width: fit-content;
-  margin: 10px;
-}
-
-a:hover {
-  opacity: 1;
-  text-decoration: none;
-}
-
-.Hello {
+.entries-list li {
+  background-color: #ccc;
+  border-radius: 10px;
+  margin-block: 1rem;
+  padding-block: 0.25rem;
+  padding-inline: 1rem;
   display: flex;
-  justify-content: center;
   align-items: center;
-  margin: 20px 0;
 }
+.entries-list li p {
+  font-size: 1.25rem;
+  margin-inline: 1rem;
+}
+
+.task-id {
+  display: none;
+}
+
+.task-description {
+  width: 100%;
+}
+
+.entry-controls {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.button {
+  flex-shrink: 0;
+  padding: 10px;
+  margin-inline: 0.25rem;
+  font-size: 1rem;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px 0 #aaa;
+  transition: 0.3s;
+  border: 0;
+}
+.button:hover {
+  box-shadow: 0 3px 5px 0 #aaa;
+}
+
+.btn-primary {
+  background-color: #1f70c0;
+  color: white;
+}
+
+.btn-green {
+  background-color: #679667;
+  color: white;
+}
+
+.btn-red {
+  background-color: #ca3e3e;
+  color: white;
+}
+
+.btn-yellow {
+  background-color: #ffd519;
+}
+
+
+
+/*# sourceMappingURL=index.css.map */
