--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -6,6 +6,7 @@
 body {
   display: flex;
   justify-content: center;
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -20,7 +21,8 @@ body {
 }
 
 header {
-  background-color: #1f70c0;
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,118,121,1) 44%, rgba(0,212,255,1) 100%);
   color: white;
   padding: 1rem 1rem;
   border-radius: 0 0 15px 15px;
@@ -29,6 +31,8 @@ header {
 }
 
 .input-panel {
+  background: rgb(0,184,221);
+  background: linear-gradient(90deg, rgba(0,184,221,0.5620842086834734) 14%, rgba(0,212,255,0.5620842086834734) 36%);
   margin: 1rem;
   border-radius:0.4rem;
   background-color: #eee;
@@ -43,10 +47,11 @@ header {
 
 .task-input {
   height: 1.5rem;
-  padding: 0.375rem 1rem;
+  padding: 0.4rem 2rem;
   font-size: 1rem;
+  margin: 0 40px 0 0;
   border: 1px solid #ced4da;
-  border-radius: 10px;
+  border-radius: 6px;
   flex-grow: 1;
   transition: 0.3s;
 }
@@ -61,6 +66,9 @@ header {
   font-weight: 500;
   margin-inline: 1rem;
   width: 130px;
+  border:1px solid black;
+  padding: 0.5rem;
+  border-radius:0.5rem;
 }
 
 .list-panel {
@@ -109,6 +117,7 @@ header {
   box-shadow: 0 1px 2px 0 #aaa;
   transition: 0.3s;
   border: 0;
+  cursor: pointer;
 }
 .button:hover {
   box-shadow: 0 3px 5px 0 #aaa;
@@ -133,6 +142,43 @@ header {
   background-color: #ffd519;
 }
 
+/* Icon Button */
+.iconButton {
+  font-size: 3rem !important;
+  cursor: pointer;
+}
+
+.iconBtn-green{
+  color:green !important;
+}
+
+.iconBtn-green:hover{
+  color:rgb(0, 194, 0) !important;
+  cursor: pointer;
+}
+.iconBtn-red{
+ color:rgb(168, 0, 0) !important;
+}
+.iconBtn-red:hover{
+  color:rgb(222, 0, 0) !important;
+  cursor: pointer;
+ }
 
 
-/*# sourceMappingURL=index.css.map */
+ .pageContent{
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+ }
+.counterContent{
+
+}
+
+.utilityContent{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end
+
+  /* align-items:right; */
+}
